# TrianglePPy

./: CMakeLists.txt  LICENSE  README.md  delaunay_binding.cpp  triangle_pp_bindings.cpp  usage_example.py
examples/: example_long.py  example_min.py  faces_direct_access.py  read_write_segments.py  trace_to_file.py
testappPyQt/: TrianglePPDemoApp_rc.py  drawing_area.py  gen_rc_file.sh  gen_ui_files.sh  main.py  resources TODO.txt  triangle_pp_demo_app.py  triangle_pp_options.py  ui_triangle_pp_demo_app.py  ui_triangle_pp_options.py
